--- a/src/resturants/templates/resturants/Resturant_detail.html
+++ b/src/resturants/templates/resturants/Resturant_detail.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Resturant List || {{ block.super }}{% endblock title %}
+{% block title %}Resturant Detail || {{ block.super }}{% endblock title %}
 
 {% block content %}
-
-	
-		<h1>{{ obj.name }} <small></small>{{ obj.categories }}</h1>
-		<p>{{ obj.location }} </p> <p>{{ obj.timestamp }}, {{ obj.updated | timesince}} ago</p>
-	
-
-
+		<h1>{{ object.name }} <small>{{ object.categories }}</small></h1>
+		<p>{{ object.location }} </p> 
+		<p>{{ object.timestamp }}, Updated {{ object.updated|timesince}} ago</p>
 {% endblock %}
