--- a/src/resturants/templates/resturants/Resturant_detail.html
+++ b/src/resturants/templates/resturants/Resturant_detail.html
@@ -2,7 +2,7 @@
 {% block title %}Resturant Detail || {{ block.super }}{% endblock title %}
 
 {% block content %}
-		<h1>{{ object.name }} <small>{{ object.categories }}</small></h1>
+		<h1>{{ object.name }} <small>{{ object.category }}</small></h1>
 		<p>{{ object.location }} </p> 
 		<p>{{ object.timestamp }}, Updated {{ object.updated|timesince}} ago</p>
 {% endblock %}
