--- a/src/resturants/templates/resturants/resturant_list.html
+++ b/src/resturants/templates/resturants/resturant_list.html
@@ -6,7 +6,7 @@
 <ul>
 	{% for obj in object_list %}
 		<li> <a href="/resturants/{{ obj.slug }}">{{ obj }} </a><br/>
-		{{ obj.name }} @ {{ obj.location }}: {{ obj.categories }} </li>
+		{{ obj.name }} @ {{ obj.location }}: {{ obj.category }} </li>
 	{% endfor %}
 
 </ul>
